# fastapi-celery-workshop

./: .env  README.md  docker-compose.yml  run.sh  run_api.sh  run_worker.sh
api/: Dockerfile  pyproject.toml  run.sh
api/api/: app.py
worker/: Dockerfile  pyproject.toml  run.sh
worker/worker/: app.py  pi_calc.py
