[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Bar Hochman <bar@bfore.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
celery = {extras = ["mongodb"], version = "^5.3.6"}
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
