[tool.poetry]
name = "worker"
version = "0.1.0"
description = ""
authors = ["Bar Hochman <bar@bfore.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
celery = {extras = ["mongodb"], version = "^5.3.6"}


[tool.poetry.group.dev.dependencies]
celery-types = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
